# vstore

./: README.md  meson.build  meson_options.txt
data/: meson.build  org.vaxp.vstore.external-appstream.policy.in.in  org.vaxp.vstore.gschema.xml
data/assets/: meson.build
gs-install-appstream/: gs-install-appstream.c  meson.build
lib/: README.md  gs-app-list.c  gs-app.c  gs-app.h  gs-appstream.c  gs-appstream.h  gs-cmd.c  gs-desktop-data.c  gs-download-utils.c  gs-external-appstream-utils.c  gs-external-appstream-utils.h  gs-icon-downloader.c  gs-icon.c  gs-job-manager.c  gs-metered.c  gs-odrs-provider.c  gs-os-release.c  gs-plugin-event.c  gs-plugin-helpers.h  gs-plugin-job-list-apps.c  gs-plugin-job-list-categories.c  gs-plugin-loader.c  gs-plugin-vfuncs.h  gs-plugin.c  gs-profiler.h  gs-rewrite-resources.c  gs-self-test.c  gs-test.c  gs-utils.c  meson.build  vstore-private.h
plugins/: meson.build
po/: POTFILES.in  ab.po  af.po  ar.po  as.po  be.po  bg.po  bn.po  bs.po  ca.po  ca@valencia.po  ckb.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  gl.po  he.po  hi.po  hr.po  hu.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kab.po  kk.po  km.po  (+30 more)
src/: gs-age-rating-context-dialog.ui  gs-app-addon-row.h  gs-app-context-bar.c  gs-app-details-page.c  gs-app-details-page.h  gs-app-reviews-dialog.c  gs-app-reviews-dialog.h  gs-app-row.h  gs-app-tile.h  gs-app-version-history-dialog.c  gs-app-version-history-dialog.h  gs-app-version-history-row.h  gs-application.c  gs-application.h  gs-basic-auth-dialog.h  (+61 more)
(+69 files in other folders)
